<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VehicleMaintainance</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_addVehicle">Add Vehicle</string>
    <string name="vehicle_type">Vehicle</string>
	<string name="serive_date">Serviced Date</string>  
	<string name="insurance_date">Insured Date</string>
	<string name="petrol">Petrol</string>
	<string name="diesel">Diesel</string>
	<string name="gas">Gas</string>
	<string name="reserve">Reserve Liters</string>
	<string name="fuel_capacity">Fuel Capacity</string>
	<string name="milage">Enter Reading  </string>
	<string name="current_reading">Current Reading  </string>
	<string name="prev_reading">Previous Reading  </string>
	<string name="fuel_economy">Fuel Economy </string>
	<string name="avg_fuel_economy">Avg Fuel Economy </string>
	
</resources>
