<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:text="@string/vehicle_type"
        android:layout_marginTop="10dp">
     <requestFocus />
    </EditText>
   
     <EditText
        android:id="@+id/editText2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:ems="10"
        android:text="@string/serive_date"
        android:layout_marginTop="10dp"
        android:inputType="date"  >
		
        <requestFocus />
    </EditText>

     <Spinner
         android:id="@+id/spinner1"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="19dp"
         android:layout_toRightOf="@+id/editText1" />

     <EditText
         android:id="@+id/editText3"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/editText2"
         android:layout_alignBottom="@+id/editText2"
         android:layout_toRightOf="@+id/editText2"
         android:ems="10" />
     
      <EditText
          android:id="@+id/editText4"
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:layout_below="@+id/editText2"
          android:layout_marginTop="10dp"
          android:ems="10"
          android:text="@string/insurance_date"
          android:inputType="date"  />

       <EditText
           android:id="@+id/editText5"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:layout_below="@+id/editText3"
           android:layout_toRightOf="@+id/editText4"
           android:ems="10"
           android:layout_marginTop="10dp" />

       <RadioGroup
           android:id="@+id/radioGroup1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_alignParentRight="true"
           android:layout_below="@+id/editText4"
           android:layout_marginTop="10dp"
           android:orientation="vertical" >

           <RadioButton
               android:id="@+id/radio0"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:checked="true"
               android:text="@string/petrol" />

           <RadioButton
               android:id="@+id/radio1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/diesel" />
           
           <RadioButton
               android:id="@+id/radio2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/gas" />
           
       </RadioGroup>
       
        <EditText
          android:id="@+id/editText6"
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:layout_below="@+id/radioGroup1"
          android:layout_marginTop="10dp"
          android:ems="10"
          android:text="@string/reserve" />

       <EditText
           android:id="@+id/editText7"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:layout_below="@+id/radioGroup1"
           android:layout_toRightOf="@+id/editText6"
           android:ems="10"
           android:layout_marginTop="10dp" />

        <EditText
          android:id="@+id/editText8"
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:layout_below="@+id/editText6"
          android:layout_marginTop="10dp"
          android:ems="10"
          android:text="@string/fuel_capacity" />

       <EditText
           android:id="@+id/editText9"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:layout_below="@+id/editText7"
           android:layout_toRightOf="@+id/editText8"
           android:ems="10"
           android:layout_marginTop="10dp" />

       <Button
           android:id="@+id/button1"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:layout_centerHorizontal="true"
           android:layout_marginBottom="33dp"
           android:text="Button" />
       
</RelativeLayout>
