<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:text="@string/vehicle_type" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/editText1"
        android:ems="10" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="24dp"
        android:layout_toLeftOf="@+id/editText2"
        android:text="@string/milage" />

    
    <EditText
        android:id="@+id/editText3"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
        android:ems="10"
        android:text="@string/current_reading" >

    </EditText>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText3"
        android:layout_below="@+id/button1"
        android:layout_toRightOf="@+id/editText3"
        android:ems="10" />
    
    <EditText
        android:id="@+id/editText5"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText3"
        android:ems="10"
        android:text="@string/prev_reading" >
    </EditText>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText5"
        android:layout_toRightOf="@+id/editText5"
        android:ems="10" />
    
     <EditText
        android:id="@+id/editText7"
		 android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText5"
        android:ems="10"
        android:text="@string/fuel_economy" >
    </EditText>

    <EditText
        android:id="@+id/editText8"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText6"
        android:ems="10" />
    
      <EditText
        android:id="@+id/editText9"
		 android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText7"
        android:ems="10"
        android:text="@string/avg_fuel_economy" >
    </EditText>

    <EditText
        android:id="@+id/editText10"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText8"
        android:ems="10" />
    
    
</RelativeLayout>
